# debug-competition

./: .gitignore  CMakeLists.txt  config.template.yaml  config.yaml  debug.tex  generate.sh
c/: CMakeLists.txt  main.c  segment_tree.c  segment_tree.h
doc/: debug.tex  tadoc.sty
sample/: CMakeLists.txt  generate.cpp  main.c  main.cpp  make.c.sh  make.cpp.sh  segment_tree.c  segment_tree.cpp  segment_tree.h  test.cpp
test-cases/: bug.0.in  bug.1.in  bug.10.in  bug.2.in  bug.3.in  bug.4.in  bug.5.in  bug.6.in  bug.7.in  bug.8.in  bug.9.in  data.0.in  data.1.in  data.2.in  data.3.in  data.4.in  data.5.in  data.6.in  data.7.in  data.8.in
